--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,18 @@
 
 
   <app-root></app-root>
-
-
+  <!-- <ul class="circles">
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+</ul> -->
+ 
 </body>
 </html>
