--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 
   <app-root></app-root>
-  <!-- <ul class="circles">
+   <ul class="circles">
     <li></li>
     <li></li>
     <li></li>
@@ -22,7 +22,7 @@
     <li></li>
     <li></li>
     <li></li>
-</ul> -->
+</ul>
  
 </body>
 </html>
